# MRepo

./: .gitignore  .gitmodules  LICENSE  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  fr.yml
.github/ISSUE_TEMPLATE /: bug.yml
.github/workflows/: android.yml
app/: build.gradle.kts  proguard-rules.pro
app/schemas/com.sanmer.mrepo.data.database.AppDatabase/: 1.json
app/schemas/com.sanmer.mrepo.data.database.ModuleDatabase/: 1.json
app/schemas/com.sanmer.mrepo.data.database.RepoDatabase/: 1.json
app/schemas/com.sanmer.mrepo.database.AppDatabase/: 1.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
app/schemas/com.sanmer.mrepo.database.RepoDatabase/: 2.json
app/schemas/dev.sanmer.mrepo.database.AppDatabase/: 1.json
app/src/debug/res/drawable/: ic_ci_label.xml
app/src/debug/res/values/: strings_untranslatable.xml
app/src/main/: AndroidManifest.xml
app/src/main/aidl/android/content/pm/: ParceledListSlice.aidl
app/src/main/aidl/com/sanmer/mrepo/provider/: IFSService.aidl  ISuProvider.aidl
app/src/main/cpp/: CMakeLists.txt  libksu.cpp  libselinux-jni.cpp  logging.h
app/src/main/java/android/os/: SELinux.java
app/src/main/java/com/sanmer/mrepo/: App.kt  MRepoApp.kt
app/src/main/kotlin/com/sanmer/mrepo/: App.kt  Compat.kt
app/src/main/kotlin/dev/sanmer/mrepo/: App.kt  Compat.kt
app/src/main/proto/: ModulesMenu.proto  RepositoryMenu.proto  UserPreferences.proto  WorkingMode.proto
app/src/main/proto/modules/: ModulesMenu.proto
app/src/main/proto/repository/: RepositoryMenu.proto
app/src/main/res/drawable/: add_outline.xml  alert_circle_filled.xml  alert_triangle.xml  arrow_badge_down.xml  arrow_badge_up.xml  arrow_down_bold.xml  arrow_left.xml  arrow_left_outline.xml  arrow_right_bold.xml  arrow_square_left_outline.xml  at.xml  award.xml  box.xml  box_bold.xml  box_outline.xml  box_remove_outline.xml  brand_cloudflare.xml  brand_git.xml  brand_open_source.xml  brightness_2.xml  brush_outline.xml  bucket_outline.xml  bug.xml  calendar_edit_outline.xml  check.xml  circle_check_filled.xml  circle_x_filled.xml  close_circle_bold.xml  close_square_outline.xml  cloud.xml  cloud_change_outline.xml  cloud_download.xml  cloud_filled.xml  code_asterix.xml  coin_outline.xml  color_swatch.xml  color_swatch_outline.xml  command.xml  command_bold.xml  command_outline.xml  (+113 more)
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml  launcher.xml
app/src/main/res/mipmap-anydpi-v33/: ic_launcher.xml
app/src/main/res/values/: colors.xml  strings.xml  strings_untranslatable.xml  themes.xml
app/src/main/res/values-ar/: strings.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-hi/: strings.xml
app/src/main/res/values-in/: strings.xml
app/src/main/res/values-it/: strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-night/: colors.xml  themes.xml
app/src/main/res/values-night-v31/: colors.xml  themes.xml
app/src/main/res/values-pl/: strings.xml
app/src/main/res/values-pt/: strings.xml
app/src/main/res/values-pt-rBR/: strings.xml
app/src/main/res/values-ro/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-tr/: strings.xml
app/src/main/res/values-v27/: themes.xml
app/src/main/res/values-v31/: colors.xml  themes.xml
app/src/main/res/values-vi/: strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/values-zh-rTW/: strings.xml
app/src/main/res/xml/: locales_config.xml  provider_paths.xml
build-logic/: build.gradle.kts  settings.gradle.kts
build-logic/src/main/kotlin/: AndroidApplicationComposeConventionPlugin.kt  AndroidApplicationConventionPlugin.kt  AndroidHiltConventionPlugin.kt  AndroidRoomConventionPlugin.kt  ApplicationConventionPlugin.kt  ComposeConventionPlugin.kt  HiltConventionPlugin.kt  LibraryConventionPlugin.kt  ProjectExt.kt  Projects.kt  ProjectsExt.kt  RoomConventionPlugin.kt
compat/: build.gradle.kts
compat/src/main/: AndroidManifest.xml
core/: build.gradle.kts  proguard-rules.pro
core/src/main/kotlin/dev/sanmer/mrepo/: ManagerService.kt  ModuleManager.kt  Platform.kt
fastlane/metadata/android/ar/: full_description.txt  short_description.txt
fastlane/metadata/android/de/: full_description.txt  short_description.txt
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/ru-RU/: full_description.txt  short_description.txt  title.txt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
hidden-api/: build.gradle.kts
hidden-api/src/main/java/android/app/: ActivityThread.java
hidden-api/src/main/java/android/content/pm/: ParceledListSlice.java
hidden-api/src/main/java/android/os/: IPowerManager.java  PowerManagerHidden.java  SELinux.java  ServiceManager.java
hidden-api/src/main/java/com/sanmer/mrepo/: BuildConfig.java
(+729 files in other folders)
